<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data/>
    <LinearLayout android:gravity="start"
        android:id="@+id/linearLoginScreen"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <ImageView android:id="@+id/imageArrowleft"
            android:layout_height="@dimen/_19pxh"
            android:layout_marginEnd="@dimen/_23pxh"
            android:layout_marginStart="@dimen/_23pxh"
            android:layout_marginTop="@dimen/_31pxv"
            android:layout_width="@dimen/_11pxh"
            android:scaleType="fitXY"
            android:src="@drawable/img_arrowleft"
            tools:ignore="ContentDescription"
            tools:src="@drawable/img_arrowleft"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtHello"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_23pxh"
            android:layout_marginStart="@dimen/_23pxh"
            android:layout_marginTop="@dimen/_27pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@string/lbl_hello"
            style="@style/txtSFProTextbold30"
            tools:text="@string/lbl_hello"
            />
        <TextView android:ellipsize="end"
            android:id="@+id/txtLetsLearnMor"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_23pxh"
            android:layout_marginStart="@dimen/_23pxh"
            android:layout_marginTop="@dimen/_9pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@string/msg_let_s_learn_mor"
            style="@style/txtSFProTextregular16"
            tools:text="@string/msg_let_s_learn_mor"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtUsername"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_23pxh"
            android:layout_marginStart="@dimen/_23pxh"
            android:layout_marginTop="@dimen/_25pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@string/lbl_username"
            style="@style/txtSFProTextmedium12"
            tools:text="@string/lbl_username"/>

        <EditText
            android:id="@+id/etLanguage"
            style="@style/etSFProTextmedium17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_23pxh"
            android:layout_marginTop="@dimen/_15pxv"
            android:layout_marginEnd="@dimen/_23pxh"
            android:drawableEnd="@drawable/img_checkmark_teal_a400"
            android:drawablePadding="@dimen/_30pxh"
            android:ellipsize="end"
            android:hint="@string/lbl_taylor_swift"
            android:inputType="text"
            android:minHeight="48dp"
            android:paddingBottom="@dimen/_11pxv"
            android:singleLine="true"
            android:textColorHint="@color/bluegray_800"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/etGroupEightyOne"
            style="@style/etSFProTextmedium12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_23pxh"
            android:layout_marginTop="@dimen/_38pxv"
            android:layout_marginEnd="@dimen/_23pxh"
            android:ellipsize="end"
            android:hint="@string/lbl_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingBottom="@dimen/_12pxv"
            android:singleLine="true"
            android:textColorHint="@color/gray_600_90"
            tools:ignore="Autofill" />
        <LinearLayout android:id="@+id/linearRowrememberme"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_23pxh"
            android:layout_marginStart="@dimen/_23pxh"
            android:layout_marginTop="@dimen/_27pxv"
            android:layout_width="match_parent"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatCheckBox
                android:buttonTint="@color/gray_600"
                android:ellipsize="end"
                android:fontFamily="@font/sf_pro_text"
                android:id="@+id/checkBoxRememberme"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_1pxv"
                android:layout_weight="0.5"
                android:layout_width="0dp"
                android:letterSpacing="0.01"
                android:paddingStart="@dimen/_7pxh"
                android:singleLine="true"
                android:text="@string/lbl_remember_me"
                android:textColor="@color/gray_600"
                android:textFontWeight="400"
                android:textSize="@dimen/_11pxh"
                android:textStyle="normal"
                tools:text="@string/lbl_remember_me"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtForgotPassword"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_135pxh"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_weight="0.5"
                android:layout_width="0dp"
                android:letterSpacing="0.01"
                android:singleLine="true"
                android:text="@string/msg_forgot_password"
                style="@style/txtSFProTextmedium11"
                tools:text="@string/msg_forgot_password"/>
        </LinearLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end"
            android:gravity="center"
            android:id="@+id/btnLogin"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_23pxh"
            android:layout_marginStart="@dimen/_23pxh"
            android:layout_marginTop="@dimen/_38pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_16pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_16pxv"
            android:singleLine="true"
            android:text="@string/lbl_login"
            android:textAllCaps="false"
            style="@style/btnSolidRounded"
            tools:text="@string/lbl_login"/>
        <LinearLayout android:gravity="center_vertical"
            android:id="@+id/linearRowdonthaveacco"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_23pxh"
            android:layout_marginStart="@dimen/_23pxh"
            android:layout_marginTop="@dimen/_19pxv"
            android:layout_width="wrap_content"
            android:orientation="horizontal">
            <TextView android:ellipsize="end"
                android:id="@+id/txtDontHaveAcco"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_1pxv"
                android:layout_weight="0.72"
                android:layout_width="0dp"
                android:singleLine="true"
                android:text="@string/msg_don_t_have_acco"
                style="@style/txtSFProTextregular12"
                tools:text="@string/msg_don_t_have_acco"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtSignUp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_3pxh"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_weight="0.28"
                android:layout_width="0dp"
                android:singleLine="true"
                android:text="@string/lbl_sign_up"
                style="@style/txtSFProTextbold12"
                tools:text="@string/lbl_sign_up"/>
        </LinearLayout>
        <FrameLayout android:id="@+id/frameStack2019planthink"
            android:layout_height="@dimen/_291pxv"
            android:layout_marginTop="@dimen/_25pxv"
            android:layout_width="match_parent">
            <TextView android:ellipsize="end"
                android:id="@+id/txt2019Planthink"
                android:layout_gravity="bottom|center"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_8pxv"
                android:layout_marginEnd="@dimen/_109pxh"
                android:layout_marginStart="@dimen/_109pxh"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@string/msg_2019_planthink"
                style="@style/txtSFProTextregular9"
                tools:text="@string/msg_2019_planthink"/>
<!--            <ImageView android:id="@+id/imageKeyboards"-->
<!--                android:layout_gravity="start"-->
<!--                android:layout_height="@dimen/_291pxh"-->
<!--                android:layout_width="match_parent"-->
<!--                android:scaleType="fitXY"-->
<!--                imageRes="@{@drawable/img_keyboards}"-->
<!--                tools:ignore="ContentDescription" tools:src="@drawable/img_keyboards"/>-->
        </FrameLayout>
    </LinearLayout>
</layout>
